--- a/2.es6/15.浏览器运行机制.md
+++ b/2.es6/15.浏览器运行机制.md
@@ -94,6 +94,7 @@
     - 浏览器定时技术器并不是由javascript引擎技术的，因为JavaScript引擎是单线程的，如果处于阻塞线程状态就会影响计数器的准确
     - 因此通过单独的线程来计数并触发定时(计时完毕后添加到事件队列中，等待JS引擎空闲后执行)
     - 注意，W3C在HTML标准中规定，规定要求setTimeout中抵御4ms的时间间隔算为4ms
+    - setInterval的问题：setInterval的回调函数可能累积多个，造成代码执行异常、浏览器最小化时setInterval也在一直输出回调函数但是函数不会执行会在打开窗口的一瞬间全部执行
 5. 异步http请求线程
     - 在XMLHTTPRequest在连接后是通过浏览器新开一个线程请求
     - 将检测到状态变更时，如果设置有回调函数，异步线程就会产生状态变更时间，将这个回调函数放到事件队列中，再由JavaScript引擎执行
