--- a/2.es6/15.浏览器运行机制.md
+++ b/2.es6/15.浏览器运行机制.md
@@ -127,7 +127,7 @@ sharedWorker是多页面共享的webWorker
 #### 普通图层和复合图层
     - 普通图层：基本的文本流
     - 默认复合图层：absolute、fixed，脱离文档流
-    - 新的复核图层：通过硬件加速方式，单独分配资源，如translate3d、translateZ、opacity属性/过度动画、video、iframe、canvas、webgl等元素
+    - 新的复合图层：通过硬件加速方式，单独分配资源，如translate3d、translateZ、opacity属性/过度动画、video、iframe、canvas、webgl等元素
 
 
 ### js运行机制
