--- a/0.面试题/1.大场面试题.md
+++ b/0.面试题/1.大场面试题.md
@@ -1,3 +1,6 @@
+摘抄自[这里](https://mp.weixin.qq.com/s/dKCtX-S6-UyojTfTiqxNww)
+
+
 ### 1、JavaScript有哪些异步编程方式
 
 1. 回调函数
@@ -129,11 +132,68 @@ function getName() {
   console.log(5)
 }
 
+
 Foo.getName()   // 2
-getName()   // 4
-Foo().getName() // 1
-getName()   // 1
-new Foo.getName()   // 2
+getName()  // 4
+Foo().getName() // 1 Foo()返回值为this，this指向window,在Foo执行过程中getName被重新赋值，所以此处打印1
+getName()  // 1
+new Foo.getName()   // 2  
 new Foo().getName() // 3
 new new Foo().getName() // 3
+
 ```
+
+关于构造函数：
+```js
+/**
+ * 构造函数返回值
+ * 在JavaScript构造函数中：如果return值类型，那么对构造函数没有影响，实例化对象返回空对象；如果return引用类型（数组，函数，对象），那么实例化对象就会返回该引用类型，但仍然可以读取到prototype上的属性和方法；
+ */
+
+function Person() {
+    //      return 123;                         //值类型
+    //      return "abcdef";                    //值类型
+    //      return ["a","b"];                   //引用类型
+    //      return {a:2};                       //引用类型
+    return function () { console.log(1) };   //引用类型
+}
+Person.prototype.sayHello =
+    function () {
+        console.log('hello world');
+    };
+console.log(new Person());
+
+//new Person()分别返回以下:
+//        1. Person{}
+//        2. Person{}
+//        3. ["a","b"];
+//        4. Object {a:2}
+
+```
+
+### 回流重绘
+1. 回流：DOM位置、尺寸等属性发生变化会触发回流
+    - 常见属性的改变：width、height、padding、margin、left、top、border
+    - 获取一些需要通过即时计算得到的属性，当我们要用到这些属性时，浏览器为了获取属性值也会触发回流：offsetTop,offsetLeft,offsetWidth,offsetHeight,scrollTop,scrollLeft,scrollWidth,scrollHeight,clientTop,clientLeft,clientWidth,clientHeight 
+    - 当我们调用了 getComputedStyle 方法，或者 IE 里的 currentStyle 时，也会触发回流。原理是一样的，都为求一个“即时性”和“准确性”。
+
+    * 优化方法：
+        1. 避免逐条改变样式，使用修改类名的方式，集中回流
+        2. 将dom离线，使用DocumentFragment
+        3. 提升为合成层，脱离文档流(不影响其他内容，只需要重绘修改部分)
+2. 重绘：颜色、背景色等不影响文档流的属性发生变化时触发
+
+### 手写promise
+https://github.com/LuckyWinty/fe-weekly-questions/issues/20
+
+
+
+
+### HTTPS 与 HTTP的区别
+
+https://github.com/LuckyWinty/fe-weekly-questions/issues/2
+
+
+### webpack性能优化
+
+https://github.com/LuckyWinty/fe-weekly-questions/issues/41
