--- a/0.面试题/4.大厂面试.md
+++ b/0.面试题/4.大厂面试.md
@@ -1,4 +1,4 @@
-# [大厂面试题](https://mp.weixin.qq.com/s/u-icMdTjWXxDcWN2K0-SpQ)
+# [大厂面试题-原文地址](https://juejin.im/post/5cb87f9df265da03555c78ec)
 
 ### 1. 达达京东到家
 
